refactor: optimize SmartphoneService implementation and data flow